# swiper

./: .gitignore  BEFORE_AFTER.md  CMakeLists.txt  CODE_FLOW.md  FEATURES.md  IMPLEMENTATION.md  PR_SUMMARY.md  README.auth.md  README.md  README_CHANGES.md  TESTING.md  UI_DESIGN.md  UI_MOCKUP.md
.github/workflows/: release.yml
dependencies/: README.md
src/capture_dll/: CMakeLists.txt  dllmain.cpp  hooking.cpp  hooking.h
src/main/: CMakeLists.txt  auth.h  hwid.h  imgui_ui.cpp  imgui_ui.h  injector.cpp  injector.h  ipc.h  main.cpp  ui.cpp  ui.h
